# webrtc-cpp-remote-control

./: .gitattributes  .gitignore  README.md  SECURITY.md
RemoteControl_rtc/: RemoteControl_rtc.slnx
RemoteControl_rtc/ConnectionSmokeTest/: ConnectionSmokeTest.vcxproj  main.cpp
RemoteControl_rtc/RemoteControl_rtc/: DesktopCaptureManager.cpp  DesktopCaptureManager.h  DxgiDesktopCapturer.cpp  DxgiDesktopCapturer.h  InputInjectorWin.cpp  InputInjectorWin.h  LocalAudioManager.cpp  LocalAudioManager.h  MediaOptions.h  PeerSession.cpp  PeerSession.h  RemoteControlChannel.cpp  RemoteControlChannel.h  RemoteControl_rtc.cpp  RemoteControl_rtc.h  RemoteControl_rtc.vcxproj  RemoteControl_rtc.vcxproj.filters  RemoteControl_rtcDlg.cpp  RemoteControl_rtcDlg.h  RemoteControlrtc.rc  RemoteVideoRecorder.cpp  RemoteVideoRecorder.h  RemoteVideoRenderer.cpp  RemoteVideoRenderer.h  Resource.h  SessionManager.cpp  SessionManager.h  SignalingClient.cpp  SignalingClient.h  SignalingProtocol.cpp  SignalingProtocol.h  VideoRenderWnd.cpp  VideoRenderWnd.h  WebRtcEngine.cpp  WebRtcEngine.h  pch.h
RemoteControl_rtc/RemoteControl_rtc/res/: RemoteControlrtc.rc2
RemoteControl_rtc/SignalingServer/: CMakeLists.txt  README.md  SignalingServer.vcxproj  main.cpp
config/: remote-control.env.example
docs/: ARCHITECTURE.md
